--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<!-- HAPPY NEW YEAR CARD -->
+<!-- By : ChocolateCharlie -->
+<!-- Last Updated : 01 - 01 - 2018 -->
+
+<RelativeLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context="com.example.happynewyear.MainActivity">
+
+<!-- Background image -->
+<!--ImageView
+    android:src="@drawable/androidparty"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.happynewyear.MainActivity">
+    android:scaleType="centerCrop" />-->
 
+<!-- Center "Happy New Year !" -->
     <TextView
+        android:text="Happy New Year !"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="8dp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textAlignment="center"
+        android:textColor="@android:color/holo_orange_light"
+        android:textSize="72sp" />
 
-</android.support.constraint.ConstraintLayout>
+<!-- Bottom Right "From ChocolateCharlie" -->
+<TextView
+    android:text="From ChocolateCharlie"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:layout_alignParentRight="true"
+    android:textSize="16sp"
+    android:fontFamily="cursive"
+    android:textColor="@android:color/holo_orange_dark"
+    android:padding="16dp" />
+
+</RelativeLayout>
