--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,14 @@ android:layout_height="match_parent"
 tools:context="com.example.happynewyear.MainActivity">
 
 <!-- Background image -->
-<!--ImageView
-    android:src="@drawable/androidparty"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scaleType="centerCrop" />-->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/winterlandscape"
+        android:contentDescription="Nature landscape in winter : dawn on a lake on foreground, forest in the background"/>
 
 <!-- Center "Happy New Year !" -->
     <TextView
@@ -32,15 +35,15 @@ tools:context="com.example.happynewyear.MainActivity">
         android:textSize="72sp" />
 
 <!-- Bottom Right "From ChocolateCharlie" -->
-<TextView
-    android:text="From ChocolateCharlie"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentRight="true"
-    android:textSize="16sp"
-    android:fontFamily="cursive"
-    android:textColor="@android:color/holo_orange_dark"
-    android:padding="16dp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:fontFamily="cursive"
+        android:padding="16dp"
+        android:text="From ChocolateCharlie"
+        android:textColor="@android:color/holo_orange_dark"
+        android:textSize="16sp" />
 
 </RelativeLayout>
